// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`coordinates QS final reasoning with the process disclosure and transcript preference > QS revealed final reasoning 1`] = `"- group: Reasoning QS persisted final reasoning marker"`;

exports[`keeps QS stop available for an offline-parent child and resumes queued work through real child input > QS running child input restriction 1`] = `"The parent session is not confirmed available. Input is disabled; a running task can still be stopped."`;

exports[`navigates QS persisted children and renders one-shot and unavailable-parent read-only input > QS one-shot read-only composer 1`] = `
"Read-only child session

One-shot child sessions are history-only and cannot accept another question."
`;

exports[`navigates QS persisted children and renders one-shot and unavailable-parent read-only input > QS unavailable-parent composer 1`] = `
"Read-only child session

The parent session is unavailable. This child cannot accept another question."
`;

exports[`opens QS settings from the sidebar and restores focus after Escape without losing the composer draft > QS numeric configuration cards 1`] = `
[
  "Shell 执行配置",
  "AgentLoop 配置",
]
`;

exports[`opens QS settings from the sidebar and restores focus after Escape without losing the composer draft > QS read-only inventory plugin card 1`] = `
"@deepseek-ai/dsh-qs-ui-settings-plugin-inventory
已启用"
`;

exports[`opens QS settings from the sidebar and restores focus after Escape without losing the composer draft > QS settings general section 1`] = `"General"`;

exports[`opens the independent QS trajectory and preserves the composer draft across reading views > QS history is not a request input reconstruction 1`] = `"These are loaded history records, not the complete model input of an individual request."`;

exports[`opens the independent QS trajectory and preserves the composer draft across reading views > QS initial trajectory support notice 1`] = `"Recorded requests, history messages and tool results are shown here. File attachment access is not connected yet."`;

exports[`opens the independent QS trajectory and preserves the composer draft across reading views > QS loaded turn navigation 1`] = `
[
  "Choose a loaded turn",
  "Turn 1",
  "Turn 2",
  "Turn 3",
  "Turn 4",
  "Turn 5",
  "Turn 6",
  "Turn 7",
  "Turn 8",
]
`;

exports[`opens the independent QS trajectory and preserves the composer draft across reading views > QS recorded request token metrics 1`] = `
{
  "cache": "Not recorded",
  "input": "2007",
  "output": "200",
}
`;

exports[`opens the independent QS trajectory and preserves the composer draft across reading views > QS request result navigation target 1`] = `"Assistant message · 6"`;

exports[`opens the independent QS trajectory and preserves the composer draft across reading views > QS tool card trajectory target 1`] = `"Tool result · 57"`;

exports[`operates the QS goal dock through the real Host and preserves a conflicting draft > QS clear goal confirmation 1`] = `
"Clear goal

Clear this goal? The conversation history will be preserved.

My preserved draft

Cancel
Confirm clear"
`;

exports[`operates the QS goal dock through the real Host and preserves a conflicting draft > QS clear goal confirmation 2`] = `
"Clear goal

Clear this goal? The conversation history will be preserved.

My preserved draft

Cancel
Confirm clear"
`;

exports[`operates the QS goal dock through the real Host and preserves a conflicting draft > QS goal command input 1`] = `"/goal"`;

exports[`operates the QS goal dock through the real Host and preserves a conflicting draft > QS live assistant before cancellation 1`] = `
"Assistant is generating · Turn 2 · Step 1
partial"
`;

exports[`operates the QS goal dock through the real Host and preserves a conflicting draft > completed QS goal after two cancelled rounds 1`] = `
"Goal complete

My preserved draft

2 rounds started / limit 256

Edit goal
Clear goal

Request accepted; waiting for state synchronization."
`;

exports[`persists QS preset policy through Host and restores it after reload and UI switches > QS blank-session preset selector 1`] = `
"- text: Session preset
- combobox "Session preset":
  - option "标准模式" [selected]
  - option "PTC 模式"
  - option "极简模式"
  - option "创造模式""
`;

exports[`persists QS preset policy through Host and restores it after reload and UI switches > QS persisted preset settings 1`] = `
"Agent presets

New sessions use the selected preset. Existing sessions retain their initial composition.

Refresh directory
Allow preset selection for new sessions
Saved default preset
标准模式
PTC 模式
极简模式
创造模式
标准模式standardSystem preset

功能完整的编码 Agent，支持文件编辑、Shell、文件与网页检索、Skills、计划、目标、子代理和工作流。

PTC 模式ptcSystem presetNew-session default

功能完整的编码 Agent，但默认不提供 workflow 工具；其他工具通过 PTC 模式 SDK 呈现，让模型用一个 TypeScript 程序组合多步操作。

极简模式minimalSystem preset

仅提供持久 shell 的单工具编码 Agent。

创造模式cordisSystem preset

用于创建自定义 Agent preset：具备标准模式的全部能力，并提供运行时检查、插件实验和 preset 创作指导。"
`;

exports[`prepends older history and preserves the visible row after first page: empty > QS empty history page notice 1`] = `"No earlier records were loaded this time. Please retry manually."`;

exports[`recovers versioned QS layout preferences and keeps denied storage usable > QS invalid layout recovery 1`] = `
"Saved layout data is invalid or uses an unsupported version. Affected settings use defaults.
Reset layout"
`;

exports[`recovers versioned QS layout preferences and keeps denied storage usable > QS unavailable layout storage 1`] = `
"The browser cannot save the layout. Changes apply only to this page.
Reset layout"
`;

exports[`restores QS tabs, splits and file resources across refresh and bounds narrow-window floats > QS deferred integrations explanation 1`] = `
"Third-party integrations are deferred for this release. This entry is informational only.

No external systems are connected, authorization requested or third-party credentials stored here. Future integration requires agreed systems, permitted operations and authentication. Static sign-in does not grant access to external systems."
`;

exports[`restores QS tabs, splits and file resources across refresh and bounds narrow-window floats > QS recovered panel layout notice 1`] = `
"Some saved panels were unavailable or did not fit this window. Available panels were restored.
Clear saved layout"
`;

exports[`selects a QS model through the shared real Host directory and retains it after reload > QS model and effort selectors 1`] = `
"- text: Select model
- combobox "Select model":
  - option "DeepSeek · DeepSeek-V4-Flash"
  - option "DeepSeek · DeepSeek-V4-Flash-Vision-Exp" [selected]"
`;

exports[`settles the recorded approval-composer turn through QS allow > approval-composer pending QS card 1`] = `
"- region "A tool asks to run":
  - text: Needs your confirmation
  - heading "A tool asks to run" [level=3]
  - paragraph: <platform shell>
  - region "Call arguments":
    - term: Reason given
    - definition: "escalate sandbox to workspace-write: Need to write the notes.txt file as requested by the user."
    - term: Target
    - definition: approval-write
    - paragraph: Call arguments
    - text: "{\\"command\\":\\"echo 'tok63z tokc7y tokibx tokofw tokujv tok10nu tok16rt tok1cvs tok1izr tok1p3q tok1v7p tok21bo tok2a4 tok8e3 tokei2 tokkm1 tokqq0 tokwtz tok12xy tok191x tok1f5w tok1l9v tok1rdu tok1xht tok23ls tok4k8 tokao7 tokgs6 tokmw5 tokt04 tokz43 tok1582 tok1bc1 tok1hg0 tok1njz tok1tny tok1zrx tokqd tok6uc tokcyb tokj2a tokp69 tokva8 tok11e7 tok17i6 tok1dm5 tok1jq4 tok1pu3 tok1vy2 tok2221 tok30h tok94g tokf8f toklce tokrgd tokxkc tok13ob tok19sa tok1fw9 tok1m08 tok1s47 tok1y86 tok24c5 tok5al tokbek tokhij toknmi toktqh tokzug tok15yf tok1c2e tok1i6d tok1oac tok1ueb tok20ia tok1gq tok7kp tokdoo tokjsn tokpwm tokw0l tok124k tok188j tok1eci tok1kgh tok1qkg tok1wof tok22se tok3qu tok9ut tokfys tokm2r toks6q tokyap tok14eo tok1ain tok1gmm tok1mql tok1suk tok1yyj tok252i tok60y tokc4x toki8w tokocv tokugu tok10kt tok16os tok1csr tok1iwq tok1p0p tok1v4o tok218n tok273 tok8b2 tokef1 tokkj0 tokqmz tokwqy tok12ux tok18yw tok1f2v tok1l6u tok1rat tok1xes tok23ir tok4h7 tokal6 tokgp5 tokmt4 toksx3 tokz12 tok1551 tok1b90 tok1hcz tok1ngy tok1tkx tok1zow toknc tok6rb tokcva tokiz9 tokp38 tokv77 tok11b6 tok17f5 tok1dj4 tok1jn3 tok1pr2 tok1vv1 tok21z0 tok2xg tok91f tokf5e tokl9d tokrdc tokxhb tok13la tok19p9 tok1ft8 tok1lx7 tok1s16 tok1y55 tok2494 tok57k tokbbj tokhfi toknjh toktng tokzrf tok15ve tok1bzd tok1i3c tok1o7b tok1uba tok20f9 tok1dp tok7ho tokdln tokjpm tokptl tokvxk tok121j tok185i tok1e9h tok1kdg tok1qhf tok1wle tok22pd tok3nt tok9rs tokfvr toklzq toks3p toky7o tok14bn tok1afm tok1gjl tok1mnk tok1srj tok1yvi tok24zh tok5xx tokc1w toki5v toko9u tokudt tok10hs tok16lr tok1cpq tok1itp tok1oxo tok1v1n tok215m tok242 tok881 tokec0 tokkfz tokqjy tokwnx' > notes.txt\\",\\"description\\":\\"Write notes.txt with the specified text\\",\\"sandbox_permissions\\":\\"workspace-write\\",\\"justification\\":\\"Need to write the notes.txt file as requested by the user.\\"}"
  - paragraph: This step waits until you answer.
  - button "Reject"
  - button "Allow once""
`;

exports[`settles the recorded approval-composer turn through QS reject > approval-composer pending QS card 1`] = `
"- region "A tool asks to run":
  - text: Needs your confirmation
  - heading "A tool asks to run" [level=3]
  - paragraph: <platform shell>
  - region "Call arguments":
    - term: Reason given
    - definition: "escalate sandbox to workspace-write: Need to write the notes.txt file as requested by the user."
    - term: Target
    - definition: approval-write
    - paragraph: Call arguments
    - text: "{\\"command\\":\\"echo 'tok63z tokc7y tokibx tokofw tokujv tok10nu tok16rt tok1cvs tok1izr tok1p3q tok1v7p tok21bo tok2a4 tok8e3 tokei2 tokkm1 tokqq0 tokwtz tok12xy tok191x tok1f5w tok1l9v tok1rdu tok1xht tok23ls tok4k8 tokao7 tokgs6 tokmw5 tokt04 tokz43 tok1582 tok1bc1 tok1hg0 tok1njz tok1tny tok1zrx tokqd tok6uc tokcyb tokj2a tokp69 tokva8 tok11e7 tok17i6 tok1dm5 tok1jq4 tok1pu3 tok1vy2 tok2221 tok30h tok94g tokf8f toklce tokrgd tokxkc tok13ob tok19sa tok1fw9 tok1m08 tok1s47 tok1y86 tok24c5 tok5al tokbek tokhij toknmi toktqh tokzug tok15yf tok1c2e tok1i6d tok1oac tok1ueb tok20ia tok1gq tok7kp tokdoo tokjsn tokpwm tokw0l tok124k tok188j tok1eci tok1kgh tok1qkg tok1wof tok22se tok3qu tok9ut tokfys tokm2r toks6q tokyap tok14eo tok1ain tok1gmm tok1mql tok1suk tok1yyj tok252i tok60y tokc4x toki8w tokocv tokugu tok10kt tok16os tok1csr tok1iwq tok1p0p tok1v4o tok218n tok273 tok8b2 tokef1 tokkj0 tokqmz tokwqy tok12ux tok18yw tok1f2v tok1l6u tok1rat tok1xes tok23ir tok4h7 tokal6 tokgp5 tokmt4 toksx3 tokz12 tok1551 tok1b90 tok1hcz tok1ngy tok1tkx tok1zow toknc tok6rb tokcva tokiz9 tokp38 tokv77 tok11b6 tok17f5 tok1dj4 tok1jn3 tok1pr2 tok1vv1 tok21z0 tok2xg tok91f tokf5e tokl9d tokrdc tokxhb tok13la tok19p9 tok1ft8 tok1lx7 tok1s16 tok1y55 tok2494 tok57k tokbbj tokhfi toknjh toktng tokzrf tok15ve tok1bzd tok1i3c tok1o7b tok1uba tok20f9 tok1dp tok7ho tokdln tokjpm tokptl tokvxk tok121j tok185i tok1e9h tok1kdg tok1qhf tok1wle tok22pd tok3nt tok9rs tokfvr toklzq toks3p toky7o tok14bn tok1afm tok1gjl tok1mnk tok1srj tok1yvi tok24zh tok5xx tokc1w toki5v toko9u tokudt tok10hs tok16lr tok1cpq tok1itp tok1oxo tok1v1n tok215m tok242 tok881 tokec0 tokkfz tokqjy tokwnx' > notes.txt\\",\\"description\\":\\"Write notes.txt with the specified text\\",\\"sandbox_permissions\\":\\"workspace-write\\",\\"justification\\":\\"Need to write the notes.txt file as requested by the user.\\"}"
  - paragraph: This step waits until you answer.
  - button "Reject"
  - button "Allow once""
`;

exports[`settles the recorded question-composer turn through QS answer > question-composer pending QS card 1`] = `
"- region "Needs your answer":
  - text: Needs your answer
  - heading "Needs your answer" [level=3]
  - group "Pick one · Which color do you prefer?":
    - text: Pick one · Which color do you prefer?
    - checkbox "Blue A cool recessive hue that reads as calm and trustworthy in long reading sessions and dense dashboards." [checked]
    - strong: Blue
    - text: A cool recessive hue that reads as calm and trustworthy in long reading sessions and dense dashboards.
    - checkbox "Green A restful mid-spectrum hue with the highest perceived brightness, easiest on the eye over long sessions."
    - strong: Green
    - text: A restful mid-spectrum hue with the highest perceived brightness, easiest on the eye over long sessions. Other (type your own)
    - textbox "Other (type your own)":
      - /placeholder: Type your answer…
      - text: Include accessibility notes
  - paragraph: This step waits until you answer.
  - button "Submit answers""
`;

exports[`settles the recorded question-composer turn through QS other-client > QS remotely settled question status 1`] = `"The pending request status has changed. Follow the current session state."`;

exports[`settles the recorded question-composer turn through QS other-client > question-composer pending QS card 1`] = `
"- region "Needs your answer":
  - text: Needs your answer
  - heading "Needs your answer" [level=3]
  - group "Pick one · Which color do you prefer?":
    - text: Pick one · Which color do you prefer?
    - checkbox "Blue A cool recessive hue that reads as calm and trustworthy in long reading sessions and dense dashboards." [checked]
    - strong: Blue
    - text: A cool recessive hue that reads as calm and trustworthy in long reading sessions and dense dashboards.
    - checkbox "Green A restful mid-spectrum hue with the highest perceived brightness, easiest on the eye over long sessions."
    - strong: Green
    - text: A restful mid-spectrum hue with the highest perceived brightness, easiest on the eye over long sessions. Other (type your own)
    - textbox "Other (type your own)":
      - /placeholder: Type your answer…
      - text: Include accessibility notes
  - paragraph: This step waits until you answer.
  - button "Submit answers""
`;

exports[`settles the recorded question-composer turn through QS stop > question-composer pending QS card 1`] = `
"- region "Needs your answer":
  - text: Needs your answer
  - heading "Needs your answer" [level=3]
  - group "Pick one · Which color do you prefer?":
    - text: Pick one · Which color do you prefer?
    - checkbox "Blue A cool recessive hue that reads as calm and trustworthy in long reading sessions and dense dashboards." [checked]
    - strong: Blue
    - text: A cool recessive hue that reads as calm and trustworthy in long reading sessions and dense dashboards.
    - checkbox "Green A restful mid-spectrum hue with the highest perceived brightness, easiest on the eye over long sessions."
    - strong: Green
    - text: A restful mid-spectrum hue with the highest perceived brightness, easiest on the eye over long sessions. Other (type your own)
    - textbox "Other (type your own)":
      - /placeholder: Type your answer…
      - text: Include accessibility notes
  - paragraph: This step waits until you answer.
  - button "Submit answers""
`;

exports[`switches registered QS workspaces and reuses their blank sessions > QS registered workspace choices 1`] = `
[
  "Choose workspace",
  "second-workspace",
  "first-workspace",
]
`;
